--- a/fusion/templates/recipes/home.html
+++ b/fusion/templates/recipes/home.html
@@ -1,18 +1,16 @@
 {% extends 'recipes/base.html' %}
 <!-- -->
 {% block content %}
-<h1>Recipes in the app</h1>
+<h1>Recipes App Home</h1>
 {% for recipe in recipes %}
-
-
-
-
 <div class="card my-4" style="width: 18rem">
   <div class="card-body">
     <h5 class="card-title">{{ recipe.title }}</h5>
     <h6 class="card-subtitle mb-2 text-muted">{{ recipe.author }}</h6>
-    <p class="card-text">{{  recipe.directions }}</p>
-    <h6 class="card-subtitle mb-2 text-muted">{{ recipe.date_posted }}</h6>
+    <p class="card-text">{{ recipe.description }}</p>
+    <h6 class="card-subtitle mb-2 text-muted">
+      {{ recipe.updated_on|date: "F d, Y"}}
+    </h6>
     <a href="#" class="card-link">View Recipe</a>
   </div>
 </div>
