--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -3,18 +3,18 @@
 
 {% block content %}
 <div class="container">
-    <form method="POST">
-        {% csrf_token %}
-        <fieldset class="form-group">
-            <legend class="border-botto, mb-4">Sign Up!</legend>
-            {{ form }}
-        </fieldset>
-        <div class="form-group py-3">
-            <input class="btn btn-outline-primay" type="submit" value="Sign updated_on"/>
-        </div>
-    </form>
+  <form method="POST">
+    {% csrf_token %}
+    <fieldset class="form-group">
+      <legend class="border-bottom mb-4">Sign Up!</legend>
+      {{ form.as_p }}
+    </fieldset>
+    <div class="form-group py-3">
+      <input class="btn btn-outline-primary" type="submit" value="Sign Up" />
+    </div>
+  </form>
     <div class="border-top pt-3">
-        <a href="#">Already have an account? Log in here. </a>
+        <a href="#">Already have an account? Log in here.</a>
     </div>
 
 </div>
