--- a/fusion/templates/recipes/base.html
+++ b/fusion/templates/recipes/base.html
@@ -27,7 +27,11 @@
           </ul>
         </div>
       </nav>
-    <div class="container mt-4 col-8"> {% block content %} {% endblock content %} </div>
+    <div class="container mt-4 col-8">
+      {% if messages %} {% for message in messages %}
+      <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+      {% endfor %}{% endif %} {% block content %} {% endblock content %} 
+    </div>
 <script 
     src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
 
