--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -1,4 +1,5 @@
 {% extends 'recipes/base.html' %}
+{% load crispy_forms_tags %}
 <!-- -->
 
 {% block content %}
@@ -7,7 +8,7 @@
     {% csrf_token %}
     <fieldset class="form-group">
       <legend class="border-bottom mb-4">Sign Up!</legend>
-      {{ form.as_p }}
+      {{ form|crispy }}
     </fieldset>
     <div class="form-group py-3">
       <input class="btn btn-outline-primary" type="submit" value="Sign Up" />
