--- a/fusion/templates/recipes/base.html
+++ b/fusion/templates/recipes/base.html
@@ -26,6 +26,16 @@
             </li>
           </ul>
         </div>
+        <div class="navbar-nav">
+          {% if user.is_authenticated %}
+          <a class="nav-item nav-link" href="{% url 'user-profile' %}">My profile</a>
+ 
+          <a class="nav-item nav-link" href="{% url 'user-logout' %}">Logout</a>
+          {% else %}
+          <a class="nav-item nav-link" href="{% url 'user-login' %}">Login</a>
+          <a class="nav-item nav-link" href="{% url 'user-register' %}">Register</a>
+          {% endif %}
+        </div>
       </nav>
     <div class="container mt-4 col-8">
       {% if messages %} {% for message in messages %}
